fix(auth): resolve display names per-guild instead of overwriting globally
Display names and avatars are inherently per-guild on Discord, so the
data model now matches: the existing discord_user_guild join table is
renamed to guild_member and gains display_name, avatar_bytes,
avatar_content_type, and updated_at columns. discord_user_cache keeps
only the global username + snowflake.

OAuth login (which writes the user's global Discord name across every
shared guild) no longer clobbers the per-guild nickname populated by
the JDA refresher. All read sites resolve names by (guildId, snowflake)
and fall back to the global username, then to "Unknown User (#…)".

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>