@@ -8,7 +8,9 @@ import static org.mockito.Mockito.*;
 import dev.tylercash.event.db.repository.AttendanceRepository;
 import dev.tylercash.event.db.repository.DiscordUserCacheRepository;
 import dev.tylercash.event.db.repository.EventRepository;
+import dev.tylercash.event.db.repository.GuildMemberRepository;
 import dev.tylercash.event.discord.model.DiscordUserCache;
+import dev.tylercash.event.discord.model.GuildMember;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
@@ -25,8 +27,13 @@ import org.springframework.beans.factory.ObjectProvider;
 @ExtendWith(MockitoExtension.class)
 class DiscordUserCacheServiceTest {
 
+    private static final long GUILD_ID = 999L;
+
     @Mock
     DiscordUserCacheRepository cacheRepository;
+
+    @Mock
+    GuildMemberRepository memberRepository;
 
     @Mock
     AttendanceRepository attendanceRepository;
@@ -46,6 +53,7 @@ class DiscordUserCacheServiceTest {
     DiscordUserCacheService buildService() {
         return new DiscordUserCacheService(
                 cacheRepository,
+                memberRepository,
                 attendanceRepository,
                 eventRepository,
                 discordServiceProvider,
@@ -62,12 +70,15 @@ class DiscordUserCacheServiceTest {
                 .thenReturn(Optional.of(new AvatarDownloadService.AvatarBytes(fakeBytes, "image/webp")));
 
         buildService()
-                .upsertUser("123", "TestUser", "test_user", "https://cdn.discordapp.com/avatars/123/hash.webp", 0L);
+                .upsertUser(
+                        "123", "TestUser", "test_user", "https://cdn.discordapp.com/avatars/123/hash.webp", GUILD_ID);
 
-        ArgumentCaptor<DiscordUserCache> captor = ArgumentCaptor.forClass(DiscordUserCache.class);
-        verify(cacheRepository).save(captor.capture());
+        ArgumentCaptor<GuildMember> captor = ArgumentCaptor.forClass(GuildMember.class);
+        verify(memberRepository).save(captor.capture());
         assertThat(captor.getValue().getAvatarBytes()).isEqualTo(fakeBytes);
         assertThat(captor.getValue().getAvatarContentType()).isEqualTo("image/webp");
+        assertThat(captor.getValue().getDisplayName()).isEqualTo("TestUser");
+        assertThat(captor.getValue().getGuildId()).isEqualTo(GUILD_ID);
     }
 
     @Test
@@ -75,32 +86,58 @@ class DiscordUserCacheServiceTest {
         when(avatarDownloadService.download(any())).thenReturn(Optional.empty());
 
         buildService()
-                .upsertUser("123", "TestUser", "test_user", "https://cdn.discordapp.com/avatars/123/hash.webp", 0L);
+                .upsertUser(
+                        "123", "TestUser", "test_user", "https://cdn.discordapp.com/avatars/123/hash.webp", GUILD_ID);
 
-        ArgumentCaptor<DiscordUserCache> captor = ArgumentCaptor.forClass(DiscordUserCache.class);
-        verify(cacheRepository).save(captor.capture());
+        ArgumentCaptor<GuildMember> captor = ArgumentCaptor.forClass(GuildMember.class);
+        verify(memberRepository).save(captor.capture());
         assertThat(captor.getValue().getAvatarBytes()).isNull();
         assertThat(captor.getValue().getAvatarContentType()).isNull();
     }
 
     @Test
     void upsertUser_savesWithNullAvatar_whenUrlIsNull() {
-        buildService().upsertUser("123", "TestUser", "test_user", null, 0L);
+        buildService().upsertUser("123", "TestUser", "test_user", null, GUILD_ID);
 
-        ArgumentCaptor<DiscordUserCache> captor = ArgumentCaptor.forClass(DiscordUserCache.class);
-        verify(cacheRepository).save(captor.capture());
+        ArgumentCaptor<GuildMember> captor = ArgumentCaptor.forClass(GuildMember.class);
+        verify(memberRepository).save(captor.capture());
         assertThat(captor.getValue().getAvatarBytes()).isNull();
         verify(avatarDownloadService, never()).download(any());
     }
 
     @Test
     void upsertUser_savesWithNullAvatar_whenUrlIsBlank() {
-        buildService().upsertUser("123", "TestUser", "test_user", "   ", 0L);
+        buildService().upsertUser("123", "TestUser", "test_user", "   ", GUILD_ID);
+
+        ArgumentCaptor<GuildMember> captor = ArgumentCaptor.forClass(GuildMember.class);
+        verify(memberRepository).save(captor.capture());
+        assertThat(captor.getValue().getAvatarBytes()).isNull();
+        verify(avatarDownloadService, never()).download(any());
+    }
+
+    @Test
+    void upsertUser_writesGlobalUsername() {
+        buildService().upsertUser("123", "TestUser", "test_user", null, GUILD_ID);
 
         ArgumentCaptor<DiscordUserCache> captor = ArgumentCaptor.forClass(DiscordUserCache.class);
         verify(cacheRepository).save(captor.capture());
-        assertThat(captor.getValue().getAvatarBytes()).isNull();
-        verify(avatarDownloadService, never()).download(any());
+        assertThat(captor.getValue().getSnowflake()).isEqualTo("123");
+        assertThat(captor.getValue().getUsername()).isEqualTo("test_user");
+    }
+
+    @Test
+    void upsertUser_doesNotOverwriteAvatarBytes_whenDownloadReturnsEmpty_andExistingMemberHasAvatar() {
+        byte[] existing = new byte[] {9, 8, 7};
+        GuildMember stored = new GuildMember(GUILD_ID, "123", "OldName", existing, "image/webp", Instant.now());
+        when(memberRepository.findByGuildIdAndSnowflake(GUILD_ID, "123")).thenReturn(Optional.of(stored));
+        when(avatarDownloadService.download(any())).thenReturn(Optional.empty());
+
+        buildService().upsertUser("123", "NewName", "test_user", "https://cdn/x.webp", GUILD_ID);
+
+        ArgumentCaptor<GuildMember> captor = ArgumentCaptor.forClass(GuildMember.class);
+        verify(memberRepository).save(captor.capture());
+        assertThat(captor.getValue().getAvatarBytes()).isEqualTo(existing);
+        assertThat(captor.getValue().getDisplayName()).isEqualTo("NewName");
     }
 
     // ── getDisplayName ───────────────────────────────────────────────────────
@@ -110,37 +147,51 @@ class DiscordUserCacheServiceTest {
 
         @Test
         void returnsCachedName() {
-            DiscordUserCache cached = new DiscordUserCache(
-                    "111", "Alice", "alice_user", Instant.now(), null, null, java.util.Collections.emptySet());
-            when(cacheRepository.findById("111")).thenReturn(Optional.of(cached));
+            GuildMember member = new GuildMember(GUILD_ID, "111", "Alice", null, null, Instant.now());
+            when(memberRepository.findByGuildIdAndSnowflake(GUILD_ID, "111")).thenReturn(Optional.of(member));
 
-            assertThat(buildService().getDisplayName("111")).isEqualTo("Alice");
+            assertThat(buildService().getDisplayName(GUILD_ID, "111")).isEqualTo("Alice");
         }
 
         @Test
-        void returnsUnknownUserWithSuffix() {
+        void fallsBackToGlobalUsername_whenMemberHasNoDisplayName() {
+            GuildMember member = new GuildMember(GUILD_ID, "111", null, null, null, Instant.now());
+            when(memberRepository.findByGuildIdAndSnowflake(GUILD_ID, "111")).thenReturn(Optional.of(member));
+            when(cacheRepository.findById("111"))
+                    .thenReturn(Optional.of(new DiscordUserCache("111", "alice_user", Instant.now())));
+
+            assertThat(buildService().getDisplayName(GUILD_ID, "111")).isEqualTo("alice_user");
+        }
+
+        @Test
+        void returnsUnknownUserWithSuffix_whenNoMemberAndNoUsername() {
+            when(memberRepository.findByGuildIdAndSnowflake(GUILD_ID, "111223333"))
+                    .thenReturn(Optional.empty());
             when(cacheRepository.findById("111223333")).thenReturn(Optional.empty());
 
-            assertThat(buildService().getDisplayName("111223333")).isEqualTo("Unknown User (#3333)");
+            assertThat(buildService().getDisplayName(GUILD_ID, "111223333")).isEqualTo("Unknown User (#3333)");
         }
 
         @Test
         void returnsUnknownForNull() {
-            assertThat(buildService().getDisplayName(null)).isEqualTo("Unknown User");
+            assertThat(buildService().getDisplayName(GUILD_ID, null)).isEqualTo("Unknown User");
+            verifyNoInteractions(memberRepository);
             verifyNoInteractions(cacheRepository);
         }
 
         @Test
         void returnsUnknownForBlank() {
-            assertThat(buildService().getDisplayName("  ")).isEqualTo("Unknown User");
+            assertThat(buildService().getDisplayName(GUILD_ID, "  ")).isEqualTo("Unknown User");
+            verifyNoInteractions(memberRepository);
             verifyNoInteractions(cacheRepository);
         }
 
         @Test
         void handlesShortSnowflake() {
+            when(memberRepository.findByGuildIdAndSnowflake(GUILD_ID, "12")).thenReturn(Optional.empty());
             when(cacheRepository.findById("12")).thenReturn(Optional.empty());
 
-            assertThat(buildService().getDisplayName("12")).isEqualTo("Unknown User (#12)");
+            assertThat(buildService().getDisplayName(GUILD_ID, "12")).isEqualTo("Unknown User (#12)");
         }
     }
 
@@ -151,31 +202,41 @@ class DiscordUserCacheServiceTest {
 
         @Test
         void returnsBatchNames() {
-            List<DiscordUserCache> entries = List.of(
-                    new DiscordUserCache(
-                            "a1", "Alice", "alice_u", Instant.now(), null, null, java.util.Collections.emptySet()),
-                    new DiscordUserCache(
-                            "b2", "Bob", "bob_u", Instant.now(), null, null, java.util.Collections.emptySet()));
-            when(cacheRepository.findAllBySnowflakeIn(Set.of("a1", "b2"))).thenReturn(entries);
+            List<GuildMember> entries = List.of(
+                    new GuildMember(GUILD_ID, "a1", "Alice", null, null, Instant.now()),
+                    new GuildMember(GUILD_ID, "b2", "Bob", null, null, Instant.now()));
+            when(memberRepository.findAllByGuildIdAndSnowflakeIn(GUILD_ID, Set.of("a1", "b2")))
+                    .thenReturn(entries);
 
-            Map<String, String> result = buildService().getDisplayNames(Set.of("a1", "b2"));
+            Map<String, String> result = buildService().getDisplayNames(GUILD_ID, Set.of("a1", "b2"));
 
             assertThat(result).containsEntry("a1", "Alice").containsEntry("b2", "Bob");
         }
 
         @Test
+        void fillsBlanksFromGlobalUsername() {
+            when(memberRepository.findAllByGuildIdAndSnowflakeIn(GUILD_ID, Set.of("a1", "b2")))
+                    .thenReturn(List.of(new GuildMember(GUILD_ID, "a1", "Alice", null, null, Instant.now())));
+            when(cacheRepository.findAllBySnowflakeIn(Set.of("b2")))
+                    .thenReturn(List.of(new DiscordUserCache("b2", "bob_global", Instant.now())));
+
+            Map<String, String> result = buildService().getDisplayNames(GUILD_ID, Set.of("a1", "b2"));
+
+            assertThat(result).containsEntry("a1", "Alice").containsEntry("b2", "bob_global");
+        }
+
+        @Test
         void emptyForNull() {
-            assertThat(buildService().getDisplayNames(null)).isEmpty();
-            verifyNoInteractions(cacheRepository);
+            assertThat(buildService().getDisplayNames(GUILD_ID, null)).isEmpty();
+            verifyNoInteractions(memberRepository);
         }
 
         @Test
         void filtersNullAndBlank() {
-            List<DiscordUserCache> entries = List.of(new DiscordUserCache(
-                    "valid", "Valid", "valid_u", Instant.now(), null, null, java.util.Collections.emptySet()));
-            when(cacheRepository.findAllBySnowflakeIn(Set.of("valid"))).thenReturn(entries);
+            when(memberRepository.findAllByGuildIdAndSnowflakeIn(GUILD_ID, Set.of("valid")))
+                    .thenReturn(List.of(new GuildMember(GUILD_ID, "valid", "Valid", null, null, Instant.now())));
 
-            Map<String, String> result = buildService().getDisplayNames(Arrays.asList("valid", null, "  "));
+            Map<String, String> result = buildService().getDisplayNames(GUILD_ID, Arrays.asList("valid", null, "  "));
 
             assertThat(result).containsOnlyKeys("valid");
         }
@@ -188,22 +249,16 @@ class DiscordUserCacheServiceTest {
 
         @Test
         void refreshesStaleEntries() {
-            long guildId = 999L;
             String snowflake = "123456789012345678";
             long snowflakeLong = Long.parseLong(snowflake);
-            when(guildRepository.findAllByActiveTrue()).thenReturn(List.of(Guild.withDefaults(guildId)));
+            when(guildRepository.findAllByActiveTrue()).thenReturn(List.of(Guild.withDefaults(GUILD_ID)));
             when(attendanceRepository.findAllDistinctSnowflakes()).thenReturn(List.of(snowflake));
             when(eventRepository.findAllDistinctCreatorSnowflakes()).thenReturn(List.of());
 
-            DiscordUserCache stale = new DiscordUserCache(
-                    snowflake,
-                    "OldName",
-                    "old_u",
-                    Instant.now().minus(60, ChronoUnit.MINUTES),
-                    null,
-                    null,
-                    new java.util.HashSet<>(List.of(guildId)));
-            when(cacheRepository.findAllBySnowflakeIn(List.of(snowflake))).thenReturn(List.of(stale));
+            GuildMember stale = new GuildMember(
+                    GUILD_ID, snowflake, "OldName", null, null, Instant.now().minus(60, ChronoUnit.MINUTES));
+            when(memberRepository.findByGuildIdAndSnowflake(GUILD_ID, snowflake))
+                    .thenReturn(Optional.of(stale));
 
             DiscordService discordService = mock(DiscordService.class);
             Member member = mock(Member.class);
@@ -211,7 +266,7 @@ class DiscordUserCacheServiceTest {
             when(member.getUser()).thenReturn(jdaUser);
             when(jdaUser.getName()).thenReturn("new_u");
             when(discordServiceProvider.getObject()).thenReturn(discordService);
-            when(discordService.getMemberFromServer(guildId, snowflakeLong)).thenReturn(member);
+            when(discordService.getMemberFromServer(GUILD_ID, snowflakeLong)).thenReturn(member);
             when(member.getNickname()).thenReturn("NewName");
             when(member.getEffectiveName()).thenReturn("NewName");
             ImageProxy avatarProxy = mock(ImageProxy.class);
@@ -221,7 +276,7 @@ class DiscordUserCacheServiceTest {
 
             buildService().refreshStaleEntries();
 
-            verify(cacheRepository).save(any(DiscordUserCache.class));
+            verify(memberRepository).save(any(GuildMember.class));
         }
 
         @Test
@@ -231,26 +286,19 @@ class DiscordUserCacheServiceTest {
 
             buildService().refreshStaleEntries();
 
+            verifyNoInteractions(memberRepository);
             verifyNoInteractions(cacheRepository);
         }
 
         @Test
         void handlesApiFailure() {
-            long guildId = 999L;
             String snowflake = "987654321098765432";
-            when(guildRepository.findAllByActiveTrue()).thenReturn(List.of(Guild.withDefaults(guildId)));
+            when(guildRepository.findAllByActiveTrue()).thenReturn(List.of(Guild.withDefaults(GUILD_ID)));
             when(attendanceRepository.findAllDistinctSnowflakes()).thenReturn(List.of(snowflake));
             when(eventRepository.findAllDistinctCreatorSnowflakes()).thenReturn(List.of());
 
-            DiscordUserCache stale = new DiscordUserCache(
-                    snowflake,
-                    "OldName",
-                    "old_u",
-                    Instant.now().minus(60, ChronoUnit.MINUTES),
-                    null,
-                    null,
-                    java.util.Collections.emptySet());
-            when(cacheRepository.findAllBySnowflakeIn(List.of(snowflake))).thenReturn(List.of(stale));
+            when(memberRepository.findByGuildIdAndSnowflake(GUILD_ID, snowflake))
+                    .thenReturn(Optional.empty());
 
             DiscordService discordService = mock(DiscordService.class);
             when(discordServiceProvider.getObject()).thenReturn(discordService);
@@ -259,7 +307,7 @@ class DiscordUserCacheServiceTest {
 
             buildService().refreshStaleEntries();
 
-            verify(cacheRepository, never()).save(any());
+            verify(memberRepository, never()).save(any());
         }
     }
 }
